tests/machine/x/ocaml/string_compare.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenstring_compare3708397647/001/string_compare.ml", line 22, characters 16-27:
22 |   print_endline ("a" < "b");
                     ^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         string
